--- a/syncUP-client.ini
+++ b/syncUP-client.ini
@@ -1,2 +1,2 @@
 [client]
-webserver = https://8lgb1qiy2l.execute-api.us-east-2.amazonaws.com/prod
+webservice = https://8lgb1qiy2l.execute-api.us-east-2.amazonaws.com/prod/
