--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,7 @@ RUN pip3 install pymysql
 RUN pip3 install boto3
 RUN pip3 install requests
 RUN pip3 install jsons
+RUN pip3 install webbrowser
 
 
 
